css/common_styles.css
@font-face {
    font-family: "OpenSans_Regular";
    src: url("fonts/OpenSans-Regular.ttf") format("truetype");
}

@font-face {
    font-family: "OpenSans_SemiBold";
    src: url("fonts/OpenSans-SemiBold.ttf") format("truetype");
}

:root {
    --color_primary: #43a047;
    --color_primary_dark: #37853a;
    --color_primary_light: #43a04880;
    --color_primary_ultra-light: #43a04825;
    --color_bg: #f2f2f2;
    --color_secondary: #ffffff;
    --color_secondary_dark: #e4e6e8;
    --color_text_dark_on_secondary: #0a0a0a;
    --color_text_light_on_secondary: #838b96;
    --color_text_light_on_secondary_dark: #72797f;
    --color_border: #d4d4d4;
    --color_error: #db4139;
    --color_error_ultra-light: #db413925;
}

@media (min-width: 1920px) {
    html {
        font-size: calc(16px + (32 - 16) * ((100vw - 1920px) / (3840 - 1920)));
    }
}

@media (max-width: 1920px) {
    html {
        font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (1920 - 320)));
    }
}

body {
    height: 100%;
    margin: 0;
    font-family: "OpenSans_Regular";
}

.preloader {
    background: var(--color_bg);
    display: block;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    z-index: 99999;
}

span.error {
    color: var(--color_error);
    transform: translate(-50%, -50%);
    position: absolute;
    top: 50%;
    left: 50%;
    height: 0;
    opacity: 0;
}

span.error.show {
    animation: show ease-out 0.3s forwards;
}

.container {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

header,
footer {
    display: flex;
    position: relative;
    justify-content: space-between;
    align-items: center;
    font-size: 1rem;
    font-family: "OpenSans_Regular";
    height: 2rem;
    line-height: 2rem;
    background: var(--color_primary);
    z-index: 2;
}

header span.app_name {
    font-family: "OpenSans_SemiBold";
    color: var(--color_secondary);
}

header span.app_name,
footer span.app_info {
    padding-left: 0.5rem;
}

header span:last-child,
footer span:last-child {
    padding-right: 0.5rem;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

header ul.navigation>li,
footer ul.tabs>li {
    display: inline-block;
}

header ul.navigation>li>*,
footer ul.tabs>li>* {
    padding-left: 0.5rem;
}

header ul.navigation ul {
    display: none;
    position: absolute;
    background: var(--color_primary);
    padding-right: 0.5rem;
    -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    z-index: 1;
}

header ul.navigation ul.active {
    display: block;
}

footer ul.tabs li>*:not(:first-child) {
    padding-right: 0.5rem;
}

footer ul.tabs li>input {
    display: none;
}

footer ul.tabs li>label {
    display: flex;
    height: inherit;
    align-items: center;
    cursor: pointer;
    color: var(--color_secondary);
    transition-duration: 0.3s;
}

footer li>input:checked+label {
    background: var(--color_primary_dark);
    transition-duration: 0.3s;
}

footer span.app_info {
    color: var(--color_secondary);
    font-family: "OpenSans_Regular";
    opacity: 0.85;
    font-size: 0.75rem;
}

a, span.close_cross {
    text-decoration: none;
    transition: 0.3s;
}

header a,
footer a {
    color: var(--color_secondary);
}

a:hover, span.close_cross:hover {
    cursor: pointer;
    transition: 0.3s;
}

header a:hover,
footer a:hover {
    opacity: 0.85;
}

.wrapper {
    background: var(--color_bg);
    display: flex;
    flex-direction: column;
    flex: 1;
    overflow: auto;
    color: var(--color_text_dark_on_secondary);
    font-size: 1rem;
}

input {
    background: var(--color_secondary);
    color: var(--color_text_dark_on_secondary);
    margin-top: 0.25rem;
    padding: 0.25rem;
    font-family: "OpenSans_Regular";
    font-size: 1rem;
    border: 0.1rem solid var(--color_border);
    border-radius: 0px;
    outline: none;
    transition: 0.3s;
}

input::placeholder {
    color: var(--color_text_light_on_secondary);
}

input:hover,
input[type="checkbox"]:not(:disabled):not(:checked)+label:hover::before {
    border-color: var(--color_primary_light);
    transition: 0.3s;
}

input:not([type="submit"]):focus,
input:active {
    border-color: var(--color_primary);
    transition: 0.3s;
}

input[type="submit"]:hover,
input[type="checkbox"]+label:hover {
    cursor: pointer;
}

input[type="checkbox"] {
    position: absolute;
    z-index: -1;
    opacity: 0;
}

input[type="checkbox"]+label {
    display: inline-flex;
    align-items: center;
    user-select: none;
    line-height: 1rem;
}

input[type="checkbox"]+label::before {
    content: "";
    display: inline-block;
    width: 1rem;
    height: 1rem;
    flex-shrink: 0;
    flex-grow: 0;
    border: 0.1rem solid var(--color_border);
    background: var(--color_secondary);
    margin-right: 0.25rem;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 50%;
    transition: 0.3s;
}

input[type="checkbox"]:checked+label::before {
    border-color: var(--color_primary);
    background-color: var(--color_primary);
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
    transition: 0.3s;
}

table {
    table-layout: fixed;
    border-collapse: collapse;
    width: max-content;
    empty-cells: show;
    outline: none;
    background-clip: padding-box;
}

th,
td {
    width: 6rem;
    border: 0.1rem solid #d4d4d4;
    padding: 2px 5px;
    outline: none;
    overflow: hidden;
    text-overflow: clip;
    white-space: nowrap;
}

th {
    background: var(--color_secondary_dark);
    border-bottom-style: none;
    font-weight: normal;
}

.cell_selection {
    position: absolute;
    display: none;
    border: 0.1rem solid var(--color_primary);
    box-sizing: border-box;
    pointer-events: none;
    z-index: 2;
}

.cell_selection.active {
    display: block;
}

.cell_selection.transition, td.transition {
    transition-duration: 0.2s;
}

.cell_selection.success {
    background: var(--color_primary_ultra-light);
}

.cell_selection.error, td.error {
    background: var(--color_error_ultra-light);
}

.context_menu {
    position: absolute;
    max-height: 12rem;
    overflow: auto;
    -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    display: none;
    z-index: 3;
}

.context_menu.active {
    display: block;
    animation: show ease-out 0.2s forwards;
}

.context_menu li {
    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
    background: var(--color_secondary_dark);
    transition: 0.3s;
}

.context_menu li:hover {
    background: var(--color_bg);
    transition: 0.3s;
    cursor: pointer;
}

@keyframes show {
    from {
        opacity: 0;
        z-index: -1;
    }
    1% {
        z-index: 4;
    }
    to {
        opacity: 100%;
        z-index: 4;
    }
}

@keyframes close {
    from {
        opacity: 100%;
        z-index: 4;
    }
    1% {
        z-index: 4;
    }
    to {
        opacity: 0;
        z-index: -1;
    }
}

div.popup {
    z-index: -1;
    opacity: 0;
    position: fixed;
    display: flex;
    background: var(--color_secondary_dark);
    -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
    padding: 0.25rem;
    text-align: center;
    max-width: 24rem;
    animation: close ease-out 0.2s forwards;
}

div.popup span.close_cross {
    align-self: flex-start;
    margin-left: 0.25rem;
}

div.popup span.close_cross:hover {
    color: var(--color_primary);
}

div.popup.active {
    animation: show ease-out 0.2s forwards;
}

div.popup.error {
    color: var(--color_error);
}

